Construindo timeline, 2o draft

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-size: 1.6rem;
   font-family: "Droid Serif", serif;
   color: #7f8c97;
-  background-color: #e9f0f5;
+  background-color:#252525;
 }
 
 a {
